# fresh-locution

./: Makefile  README.md  db.py  db_test.py  fresh.py  fresh_test.py  locutions.py  locutions_test.py  nlp.py  nlp_test.py  old.py  old_test.py  pyproject.toml  trie.py  trie_test.py  wiki_abstract.py  wiki_abstract_test.py
.github/workflows/: bandit.yml  codeql.yml  pysa.yml
