[tool.poetry]
name = "fresh-locution"
version = "0.1.0"
description = "Extract fresh locutions from horodated feeds"
authors = ["Mathieu Lecarme <mathieu@garambrogne.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
zstandard = "^0.22.0"
pysbd = "^0.3.4"
joblib = "^1.3.2"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
